--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
+    "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
@@ -42,7 +44,6 @@
     "nodemailer": "^6.8.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.29",
-    "typeorm-pagination": "^2.0.3"
+    "typeorm": "0.2.29"
   }
 }
