--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" &amp;&amp; exit 1",
+    "test": "jest",
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/ioredis": "^5.0.0",
+    "@types/jest": "^29.4.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/multer": "^1.4.7",
@@ -26,7 +27,9 @@
     "eslint": "^8.30.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.2.0",
+    "jest": "^29.4.1",
     "prettier": "^2.8.1",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.4"
